--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,6 @@
 name: Build and Publish Docker Image
 
-on:
-  push:
-    branches:
-      - main
+on: push
 
 jobs:
   build-and-publish:
@@ -14,22 +11,25 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to GitHub Packages
-        uses: docker/login-action@v1
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
-          registry: docker.pkg.github.com
+          node-version: 14
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Build
+        run: npm run build
+
+      - name: Configure Docker
+        uses: azure/docker-login@v1
+        with:
+          login-server: docker.pkg.github.com
           username: ${{ github.actor }}
           password: ${{ secrets.EPM_TOKEN }}
 
       - name: Build and Push Docker Image
-        env:
-          DOCKER_BUILDKIT: 1
         run: |
-          docker buildx create --use
-          docker buildx build --push --platform linux/amd64,linux/arm64 --tag docker.pkg.github.com/${{ github.repository }}/vessel_intelligent_edge:latest .
+          docker build -t docker.pkg.github.com/${{ github.repository }}/vessel_intelligent_edge:${{ github.sha }} .
+          docker push docker.pkg.github.com/${{ github.repository }}/vessel_intelligent_edge:${{ github.sha }}
